--- a/codafone.html
+++ b/codafone.html
@@ -53,7 +53,7 @@
          They may have promised their customers the best stuff team, but I’m here to expose what might 
          be another one of their lies! Codafone swears by their inclusiveness. This act sounds amazing, 
          but I wasn't aware that they included criminals, as well! This company was very respected
-         and looked up to… I guess you're not bad until you're talked about!</p>
+         and looked up to… I guess you're not bad until you're talked about...</p>
         <!-- Carousel -->
     </div>
     <!-- Carousel -->
