--- a/alex.html
+++ b/alex.html
@@ -4,7 +4,7 @@
   <link rel="icon" type="image/x-icon" href="./images/silver_lips.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Alexandros Nikoletopoulos</title>
     <!-- Latest compiled and minified CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -17,8 +17,8 @@
     <!-- A grey horizontal navbar that becomes vertical on small screens -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="javascript:void(0)"> 
-            <img src="./images/codsip_girl_logo.PNG" width="225" >
+          
+            <a href="index.html"> <img src="./images/codsip_girl_logo.PNG" width="225" ></a>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
@@ -50,8 +50,11 @@
                     </p>
                     </td>
                     <td class="details2">As we all know, Alex takes credit on his entertainment skills. 
-                        In fact, he thought he was so good at making people laugh that he tried to pursue stand-up comedy. Once on stage though, people could not stand his inability to be funny and after 
-                        a lawsuit, the Supreme Court decided that the only solution would be to lock him up in jail. </td></table>
+                        In fact, he thought he was so good at making people laugh that he tried to 
+                        pursue stand-up comedy. Once on stage though, people could not stand his inability to
+                         be funny and after 
+                        a lawsuit, the Supreme Court decided that the only solution would be to lock 
+                        him up in jail. Don't let your ego get to you next time, A.</td></table>
                 </div>
             </div>
         
