--- a/codafone.html
+++ b/codafone.html
@@ -11,12 +11,13 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 
 <link rel="stylesheet" href="css/style.css">
+<link rel="icon" type="image/x-icon" href="./images/silver_lips.png">
 </head>
 <body>
     <!-- A grey horizontal navbar that becomes vertical on small screens -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="javascript:void(0)"> <img src="./images/codsip_girl_logo.PNG" width="225" ></a>
+           <a href="index.html"> <img src="./images/codsip_girl_logo.PNG" width="225" > </a></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -50,7 +51,7 @@
          company on the Upper East Side of Athens! With the surprising number of one store worldwide…
          or should I say universally? Codafone goals on expanding on Mars until the end of the week, 
          but I wouldn’t take their word on that. Afterall, it won’t be their first time making empty promises… 
-         They may have promised their customers the best stuff team, but I’m here to expose what might 
+         They may have promised their customers the best staff team, but I’m here to expose what might 
          be another one of their lies! Codafone swears by their inclusiveness. This act sounds amazing, 
          but I wasn't aware that they included criminals, as well! This company was very respected
          and looked up to… I guess you're not bad until you're talked about...</p>
