--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <audio autoplay>
+    <source src="themesong.mp3" type="audio/ogg">
+    <source src="themesong.mp3" type="audio/mpeg">
+    </audio>
     <!-- A grey horizontal navbar that becomes vertical on small screens -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container-fluid">
@@ -37,8 +41,8 @@
         <h4 class="headingcod">Latest news</h4>
         <p class="headingcod"><a href="codafone.html"><img src="./images/codafone_logo.PNG" width=50% height=50%></a><br><br>
           <a href="codafone.html">Spotted: Codafone in the Hot Seat</a></p>
-          <form>
-            <p class="headingcod"><label for="fname">Spill the tea (anonymous):</label><br>
+          <form action="mailto:vasiliki.katsika@acg.edu">
+            <p class="headingcod"><label for="fname">Spill the tea:</label><br>
               <input type="text" id="fname" name="fname"><br><br>
               <input type="submit" value="Submit"></form></p>
            </form>    
