--- a/elisavet.html
+++ b/elisavet.html
@@ -4,7 +4,7 @@
   <link rel="icon" type="image/x-icon" href="./images/silver_lips.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Elisavet Lymperi</title>
     <!-- Latest compiled and minified CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -17,8 +17,7 @@
     <!-- A grey horizontal navbar that becomes vertical on small screens -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="javascript:void(0)"> 
-            <img src="./images/codsip_girl_logo.PNG" width="225" >
+           <a href="index.html"> <img src="./images/codsip_girl_logo.PNG" width="225" ></a>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
@@ -45,7 +44,7 @@
                             <li>Age: 28</li>
                             <li>Status: Basic</li>
                             <li>Former employment: Front End Web Developer at Codafone</li>
-                            <li>Hobbies: Beach Volleyball, Playing the Guitar </li>
+                            <li>Hobbies: Music, Movies </li>
                         </ul>
                     </p>
                     </td>
