--- a/kostas.html
+++ b/kostas.html
@@ -4,7 +4,7 @@
   <link rel="icon" type="image/x-icon" href="./images/silver_lips.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Konstantinos Kechris</title>
     <!-- Latest compiled and minified CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -17,8 +17,7 @@
     <!-- A grey horizontal navbar that becomes vertical on small screens -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="javascript:void(0)"> 
-            <img src="./images/codsip_girl_logo.PNG" width="225" >
+          <a href="index.html"> <img src="./images/codsip_girl_logo.PNG" width="225" ></a>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
@@ -51,9 +50,10 @@
                     </td>
                     <td class="details2">As to Konstantinos, there's no official document nor formal announcement
                         as to what exactly he has done. 
-                        There are, however, some rumors heard that involve a murder. What we know for sure is that police 
-                        is desperately looking for him and searching every part of town. But we wouldn't be Codsip girl if we didn't have the exclusive 
-                        information that no one else does. We have reasons to believe he's hiding in <button type="button" 
+                        There are, however, some rumors heard that involve fraud and embezzlement during the national elections. What 
+                        we know for sure is that police 
+                        is desperately looking for him and searching every part of town. But I wouldn't be Codsip girl if I didn't have the exclusive 
+                        information that no one else does. I have reasons to believe he's hiding in <button type="button" 
                         class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
                             plain sight.
                           </button>
@@ -65,8 +65,12 @@
                                                     
                                 <!-- Modal body -->
                                 <div class="modal-body">
-                                  <img src="./images/kostas2.png" width="100%" height="100%">
-                                </div>
+                                  <audio controls>
+                                    <source src="horse.mp3" type="audio/ogg">
+                                    <source src="horse.mp3" type="audio/mpeg">
+                                    </audio>
+                                  <img src="./images/kostas2.png" width="100%" height="100%" >
+                                                                    </div>
                           
                                 <!-- Modal footer -->
                                 <div class="modal-footer">
