--- a/nikos.html
+++ b/nikos.html
@@ -4,7 +4,7 @@
   <link rel="icon" type="image/x-icon" href="./images/silver_lips.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nikos Alvanos</title>
     <!-- Latest compiled and minified CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -17,8 +17,7 @@
     <!-- A grey horizontal navbar that becomes vertical on small screens -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="javascript:void(0)"> 
-            <img src="./images/codsip_girl_logo.PNG" width="225" >
+          <a href="index.html"> <img src="./images/codsip_girl_logo.PNG" width="225" ></a>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
@@ -39,7 +38,7 @@
                 <div class="card"style="width:400px">
                 <img class="card-img-top" src="./images/nikos1.png" alt="Card image">
                 <div class="card-body">
-                    <h4 class="card-title">Alexandros Nikoletopoulos</h4>
+                    <h4 class="card-title">Nikos Alvanos</h4>
                     <p class="card-text">
                         <ul>
                             <li>Age: 25</li>
